[project]
name = "langgraph-deployment"
version = "0.1.0"
description = "LangGraph Deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[openai]>=0.3.24",
    "langgraph>=0.3.34",
    "langgraph-api>=0.1.16",
    "langgraph-cli[inmem]>=0.2.7",
    "langgraph-sdk>=0.1.63",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
